iniciamos los metodos para guardar en una base de datos la agenda completa, al presionar el boton guardar agenda

--- a/AgendaContacto/AgendaContacto/AgendaContacto.csproj
+++ b/AgendaContacto/AgendaContacto/AgendaContacto.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Docs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="9.5.0" />
+  </ItemGroup>
+
 </Project>
